--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.1+20190324
+:revnumber: 0.1.0-dev.2+20190324
 :version-label: Version de edition digital:
 :lang: ie
 
@@ -13,7 +13,7 @@
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201903241630
+// Last modified 201903241632
 
 Printería de J. A. Kajš
 
@@ -509,7 +509,7 @@ Certmen it ne vell comprender. Ma -- esque li circumitá ne va lansar Ondra in
 li primitivisme? Esque il ne percepte ja nu quam passu pos passu il fusiona con
 su nov popul? Yes, il senti que il ama su popul ne solmen quam li chef, ma quam
 un de it. Il va dar se li pena por esser bon consiliator de su popul. Adver il
-es yun, ma il senti li fortie por su nov tache. Pro to in li music-<br/>pause
+es yun, ma il senti li fortie por su nov tache. Pro to in li music-pause
 il demandat silentie por posser dir quelc paroles. Li tambures sonat. Poy Ondra
 in su alocution dit circa lu sequent:
 
