--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.4+20190329
+:revnumber: 0.1.0-dev.5+20190329
 :version-label: Version de edition digital:
 :lang: ie
 :docinfo: private
@@ -232,7 +232,7 @@ Ondra sentit qualmen omni ocules perfora le por decovrir su intentiones.
 
 "`Qui es tu?`" questiona li oldo.
 
-"`Yo es Toník Ondra e yo labora in li proxim ferral fonderia.
+"`Yo es Toník Ondra e yo labora in li proxim ferral fonderia.`"
 
 "`Quo significa ferral fonderia?`"
 
@@ -638,7 +638,7 @@ avan li ovre del natura.
 Quant millenies li natura laborat por far ti magnificentie?
 
 In altri grottes ili trovat stalactites formant fantastic figuras de nanes,
-cortnes, vases, calices e divers objectes por li homan fantasie. Un altri
+cornes, vases, calices e divers objectes por li homan fantasie. Un altri
 grotte presentat li image de destruction. Ta li plafon con pesant stalactites
 ha ruit e nu omnicos jace sur li terra in un caos. Ma vice li ruit stalactites
 forma se novi -- quam un image del circulant vive...
@@ -655,7 +655,7 @@ moment in quelcunc loc.
 Ondra ha translocat se in spiritu a su nativ dom e parlat con su matre quel
 esset plen de timore pri su unic filio.
 
-"`Yes, it es talmen, Krasina,`" afirmat Ondra, `"just yo ha
+"`Yes, it es talmen, Krasina,`" afirmat Ondra, "`just yo ha
 convictet me pri to.`"
 
 "`Qualmen, Toník?`"
@@ -680,13 +680,13 @@ principie del amore e li mann li principie del sagesse. Noi save que li amore
 es figurat in li fysic munde per calore e li veritá per luce. Li tot vive es
 conditionat per calore e luce, ergo per amore e sagesse. Sin li amore e sagesse
 li ver matrimonie es inpossibil sammen quam li fysic vie es inpossibil sin li
-calore e luce.
+calore e luce.`"
 
 "`Yo deve confesser que yo nequande serchat un tal profundore in li
 religion. Tam minu yo vell expectar it che un popul separat durant millennies de
-nor cultura.
+nor cultura.`"
 
-"`Tu deve raconar me pri vor religion. Precipue in quo it difere de
+"`Tu deve racontar me pri vor religion. Precipue in quo it difere de
 nor.`"
 
 "`Car Krasina, til nu yo ha audit solmen un parte de vor religion. Ma ja
@@ -874,7 +874,7 @@ trovat alcun tracie del Slavines. Li responses nequande posset contentar
 le.
 
 Depos ti tempor Ondra esset quelcvez in li subterrania. Ma benque mult
-grottes aparet le conosset, Tamen il nequande trovat su Krasina.
+grottes aparet le conosset. Tamen il nequande trovat su Krasina.
 
 // Posparol del editoria {{{1
 == Posparol del editoria
@@ -893,7 +893,7 @@ grottes apartene al max grand marveles del natura in li munde.
 Li abyss es in realitá un anteyan colossal grotte (profun 138.4 m, larg 76 e
 long 175 m), de quel li
 plafon ha ruit e talmen ha format se li gigantic abyss. Ante li labores
-mentionat on posset atinger li fude de Macocha solmen per un ferrin scale, ma
+mentionat on posset atinger li funde de Macocha solmen per un ferrin scale, ma
 nu on posse atinger it comodmen per coridores del grottes de Punkva.
 
 Ma ne solmen li grottes de Punkva, anc li vicin grottes de Caterina
