--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.7+20190329
+:revnumber: 0.1.0-dev.8+20190412
 :version-label: Version de edition digital:
 :lang: ie
 :docinfo: private
@@ -20,18 +20,18 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201903292015
+// Last modified 201904122007
 
 :dot: .
 
 // Pri ti libre {{{1
 == Pri ti libre
 
-Titul:: Krasina
+Titul:: Krasina.
 
-Subtitul:: Original raconta ex li subterrania de Moravian Carst
+Subtitul:: Original raconta ex li subterrania de Moravian Carst.
 
-Autor:: {author}
+Autor:: {author}.
 
 Edition original:: Printería de J. A. Kajš, Brno, 1938.
 
