--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -1,6 +1,6 @@
 = TO-DO of _Krasina_
 :author: Marcos Cruz (programandala.net)
-:revdate: 2019-03-29
+:revdate: 2019-04-12
 
 // This file is part of project
 // _Krasina_
@@ -11,7 +11,8 @@
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201903292007
+// Last modified 201904122016
 
 - Transcription typo?: "In su maleol un crac e il senti que il ne
   posse escapar".
+- Add all accents.
